--- a/improve.cabal
+++ b/improve.cabal
@@ -1,9 +1,9 @@
 name:    improve
-version: 0.0.0
+version: 0.0.1
 
 category: Language
 
-synopsis: A simple imperative, provable programming language for embedded applications.
+synopsis: A simple imperative programming language for embedded applications.
 
 description:
     TODO
@@ -22,8 +22,7 @@ cabal-version: >= 1.6
 library
     build-depends:
         base       >= 4.2     && < 5,
-        mtl        >= 1.1.0.1 && < 1.2,
-        process    >= 1.0.1.1 && < 1.2
+        mtl        >= 1.1.0.1 && < 1.2
 
     exposed-modules:
         Language.ImProve
