--- a/improve.cabal
+++ b/improve.cabal
@@ -1,9 +1,9 @@
 name:    improve
-version: 0.0.1
+version: 0.0.2
 
 category: Language
 
-synopsis: A simple imperative programming language for embedded applications.
+synopsis: An imperative, verifiable programming language for embedded applications.
 
 description:
     TODO
@@ -26,6 +26,8 @@ library
 
     exposed-modules:
         Language.ImProve
+        Language.ImProve.Core
+        Language.ImProve.Verify
 
     extensions: GADTs, FlexibleInstances
 
