--- a/improve.cabal
+++ b/improve.cabal
@@ -26,6 +26,7 @@ library
 
     exposed-modules:
         Language.ImProve
+        Language.ImProve.Code
         Language.ImProve.Core
         Language.ImProve.Verify
 
