--- a/improve.cabal
+++ b/improve.cabal
@@ -28,6 +28,7 @@ library
         Language.ImProve
         Language.ImProve.Code
         Language.ImProve.Core
+        Language.ImProve.Examples
         Language.ImProve.Tree
         Language.ImProve.Verify
 
