--- a/improve.cabal
+++ b/improve.cabal
@@ -1,12 +1,12 @@
 name:    improve
-version: 0.0.7
+version: 0.0.8
 
 category: Language
 
 synopsis: An imperative, verifiable programming language for high assurance applications.
 
 description:
-  ImProve is an imperative DSL intended for high assurance, embedded applications.
+  ImProve is an imperative programming language for high assurance applications.
   ImProve uses infinite state, unbounded model checking to verify programs adhere
   to specifications, which are written in the form of assertion statements.
   Yices (required) is the backend SMT solver.
