added Embedded category

--- a/improve.cabal
+++ b/improve.cabal
@@ -1,7 +1,7 @@
 name:    improve
-version: 0.0.12
+version: 0.0.13
 
-category: Language
+category: Language, Formal Methods, Embedded
 
 synopsis: An imperative, verifiable programming language for high assurance applications.
 
