--- a/improve.cabal
+++ b/improve.cabal
@@ -1,5 +1,5 @@
 name:    improve
-version: 0.0.13
+version: 0.1.0
 
 category: Language, Formal Methods, Embedded
 
@@ -24,16 +24,16 @@ cabal-version: >= 1.6
 
 library
     build-depends:
-        base  >= 4.2     && < 5,
-        mtl   >= 1.1.0.1 && < 1.2,
-        yices >= 0.0.0.7 && < 0.0.1
+        base      >= 4.0     && < 5,
+        mtl       >= 1.1.0.1 && < 1.2,
+        tree-ctor >= 0.0.0 && < 0.1,
+        yices     >= 0.0.0.7 && < 0.0.1
 
     exposed-modules:
         Language.ImProve
         Language.ImProve.Code
         Language.ImProve.Core
         Language.ImProve.Examples
-        Language.ImProve.Tree
         Language.ImProve.Verify
 
     extensions: GADTs, FlexibleInstances, TypeSynonymInstances
